[package]
name = "jetstreamer-plugin"
description = "Support crate for Jetstreamer containing plugin framework abstractions and utilities"
keywords.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
jetstreamer-firehose.workspace = true

serde.workspace = true
solana-message.workspace = true
solana-address.workspace = true
tokio.workspace = true
log.workspace = true
clickhouse.workspace = true
futures-util.workspace = true
thiserror.workspace = true
sha2.workspace = true
dashmap.workspace = true
once_cell.workspace = true
solana-sdk-ids.workspace = true
solana-storage-proto.workspace = true
solana-transaction.workspace = true
solana-transaction-status.workspace = true
solana-reward-info.workspace = true
serde_json.workspace = true
prost.workspace = true
url.workspace = true
